made home page responsive, added about page and fixed lots of layout issues, changed billboard image dimensions

--- a/styles/global.css
+++ b/styles/global.css
@@ -14,11 +14,13 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
   font-family: "Poppins", sans-serif;
   color: var(--clr-primary);
+  overflow-x: hidden;
 }
 
 a {
